--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -12,14 +12,14 @@
         @* Here's where we render the page title `String`. *@
         <title>@title</title>
         <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/main.css")">
-        <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("images/favicon.png")">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("lib/codemirror/lib/codemirror.css")">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("lib/codemirror/theme/eclipse.css")">
+        <link rel="shortcut icon" type="image/vnd.microsoft.icon" href="@routes.Assets.versioned("images/favicon.ico")">
 
     </head>
     <body>
         @* And here's where we render the `Html` object containing
          * the page content. *@
         @content
-
-      <script src="@routes.Assets.versioned("javascripts/main.js")" type="text/javascript"></script>
     </body>
 </html>
