--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -9,6 +9,16 @@ table.data, .data th, .data td {
   border-collapse: collapse;
 }
 
+table.data, .data th, .data td.numeric {
+  padding-left: 0.3em;
+  text-align: right;
+}
+
+table.data, .data th, .data td.non-numeric {
+  padding-right: 0.3em;
+  text-align: left;
+}
+
 table.metadata, .metadata th, .metadata td {
   text-align: left;
   vertical-align: top;
